sys/kern/sched_4bsd.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: sched_4bsd.c,v 1.38 2019/11/29 18:29:45 ad Exp $	*/
+/*	$NetBSD: sched_4bsd.c,v 1.39 2019/12/01 13:20:42 ad Exp $	*/
 
 /*
  * Copyright (c) 1999, 2000, 2004, 2006, 2007, 2008, 2019
@@ -69,7 +69,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: sched_4bsd.c,v 1.38 2019/11/29 18:29:45 ad Exp $");
+__KERNEL_RCSID(0, "$NetBSD: sched_4bsd.c,v 1.39 2019/12/01 13:20:42 ad Exp $");
 
 #include "opt_ddb.h"
 #include "opt_lockdebug.h"
@@ -130,9 +130,9 @@ sched_tick(struct cpu_info *ci)
 		/* Force it into mi_switch() to look for other jobs to run. */
 #ifdef __HAVE_PREEMPTION
 		atomic_or_uint(&l->l_dopreempt, DOPREEMPT_ACTIVE);
-		cpu_need_resched(ci, l, RESCHED_KPREEMPT);
+		atomic_or_uint(&ci->ci_want_resched, RESCHED_KPREEMPT);
 #else
-		cpu_need_resched(ci, l, RESCHED_UPREEMPT);
+		atomic_or_uint(&ci->ci_want_resched, RESCHED_UPREEMPT);
 #endif
 		break;
 	default:
@@ -144,9 +144,9 @@ sched_tick(struct cpu_info *ci)
 			 */
 #ifdef __HAVE_PREEMPTION
 			atomic_or_uint(&l->l_dopreempt, DOPREEMPT_ACTIVE);
-			cpu_need_resched(ci, l, RESCHED_KPREEMPT);
+			atomic_or_uint(&ci->ci_want_resched, RESCHED_KPREEMPT);
 #else
-			cpu_need_resched(ci, l, RESCHED_UPREEMPT);
+			atomic_or_uint(&ci->ci_want_resched, RESCHED_UPREEMPT);
 #endif
 		} else if (spc->spc_flags & SPCF_SEENRR) {
 			/*
@@ -155,7 +155,7 @@ sched_tick(struct cpu_info *ci)
 			 * Indicate that the process should yield.
 			 */
 			spc->spc_flags |= SPCF_SHOULDYIELD;
-			cpu_need_resched(ci, l, RESCHED_UPREEMPT);
+			atomic_or_uint(&ci->ci_want_resched, RESCHED_UPREEMPT);
 		} else {
 			spc->spc_flags |= SPCF_SEENRR;
 		}
